[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum        = "0.7"
tokio       = { version = "1", features = ["full"] }
hdf5        = "0.8"
rusqlite    = "0.31"
rmp-serde   = "1.1"
sha2        = "0.10"
uuid        = { version = "1", features = ["v4"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
